@@ -430,3 +430,4 @@ current
            the size of the floating strings.
 * pheno:   fixed landmine drawing for shoutcasters in follow mode
 * pheno:   fixed class change on cancel bug
+* pheno:   added referee/rcon shoutcaster menu entries
