@@ -5,8 +5,8 @@
 #define WINDOW_X		16
 #define WINDOW_Y		16
 //#define WINDOW_WIDTH	128
-#define WINDOW_WIDTH	348
-#define WINDOW_HEIGHT	180
+#define WINDOW_WIDTH	368
+#define WINDOW_HEIGHT	216
 #define GROUP_NAME		"grpIngameVotePlayers"
 
 // Macros //
@@ -36,7 +36,7 @@ menuDef {
 	itemDef {
 		name			"playerList"
 		group			GROUP_NAME
-		rect			6 32 196 118
+		rect			6 32 196 158
 		type			ITEM_TYPE_LISTBOX
 		textfont		UI_FONT_COURBD_21
 		textscale		.2
@@ -78,7 +78,12 @@ menuDef {
 	BUTTONEXT( 208, 122, WINDOW_WIDTH-208-6, 14, "MAKE SPEC", .24, 11, uiScript refMakeSpec ; uiScript closeingame, cvarTest "authLevel" showCVar { RL_REFEREE RL_RCON } )
 	
 	BUTTONEXT( 208, 140, WINDOW_WIDTH-208-6, 14, "WARN", .24, 11, open ingame_vote_players_warn, cvarTest "authLevel" showCVar { RL_REFEREE RL_RCON } )
-	BUTTONEXT( 208, 152, WINDOW_WIDTH-208-6, 14, "BAN", .24, 11, uiScript rconBan ; uiScript closeingame, cvarTest "authLevel" showCVar { RL_RCON } )
-
+	BUTTONEXT( 208, 158, WINDOW_WIDTH-208-6, 14, "BAN", .24, 11, uiScript rconBan ; uiScript closeingame, cvarTest "authLevel" showCVar { RL_RCON } )
+	
+	BUTTONEXT( 208, 176, WINDOW_WIDTH-208-6, 14, "MAKE SHOUTCASTER", .24, 11, uiScript refMakeShoutcaster ; uiScript closeingame, ownerdrawFlag UI_SHOW_PLAYERNOSHOUTCASTER cvarTest "authLevel" showCVar { RL_REFEREE } )
+	BUTTONEXT( 208, 176, WINDOW_WIDTH-208-6, 14, "MAKE SHOUTCASTER", .24, 11, uiScript rconMakeShoutcaster ; uiScript closeingame, ownerdrawFlag UI_SHOW_PLAYERNOSHOUTCASTER cvarTest "authLevel" showCVar { RL_RCON } )
+	BUTTONEXT( 208, 176, WINDOW_WIDTH-208-6, 14, "REMOVE SHOUTCASTER", .24, 11, uiScript refRemoveShoutcaster ; uiScript closeingame, ownerdrawFlag UI_SHOW_PLAYERSHOUTCASTER cvarTest "authLevel" showCVar { RL_REFEREE } )
+	BUTTONEXT( 208, 176, WINDOW_WIDTH-208-6, 14, "REMOVE SHOUTCASTER", .24, 11, uiScript rconRemoveShoutcaster ; uiScript closeingame, ownerdrawFlag UI_SHOW_PLAYERSHOUTCASTER cvarTest "authLevel" showCVar { RL_RCON } )
+	
 	BUTTON( 6, WINDOW_HEIGHT-24, WINDOW_WIDTH-12, 18, "BACK", .3, 14, close ingame_vote_players ; open ingame_vote )
 }
