@@ -2059,3 +2059,4 @@
 * pheno:   fixed landmine snapshot callback for shoutcasters in follow mode
 * pheno:   added shoutcaster console commands
 * pheno:   added [i] shortcut for shrubbot [command] elements only
+* pheno:   added shoutcaster referee commands
